--- a/AnimationDemo/Controller/TapAnimationViewController.xib
+++ b/AnimationDemo/Controller/TapAnimationViewController.xib
@@ -22,7 +22,7 @@
             <subviews>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Uf6-Hf-1Sr">
                     <rect key="frame" x="162" y="761" width="90" height="40"/>
-                    <color key="backgroundColor" systemColor="systemPurpleColor" red="0.68627450980392157" green="0.32156862745098042" blue="0.87058823529411766" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <color key="backgroundColor" systemColor="systemPurpleColor" red="0.68627450980000004" green="0.32156862749999998" blue="0.87058823529999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="40" id="2UT-jy-Md4"/>
                         <constraint firstAttribute="width" constant="90" id="mJU-Sf-f2b"/>
@@ -36,7 +36,18 @@
                 </button>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WhF-1w-FeR">
                     <rect key="frame" x="0.0" y="44" width="414" height="697"/>
-                    <color key="backgroundColor" systemColor="systemTealColor" red="0.35294117647058826" green="0.78431372549019607" blue="0.98039215686274506" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <subviews>
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sd" translatesAutoresizingMaskIntoConstraints="NO" id="MBy-jV-loQ">
+                            <rect key="frame" x="0.0" y="0.0" width="414" height="697"/>
+                        </imageView>
+                    </subviews>
+                    <color key="backgroundColor" systemColor="systemTealColor" red="0.35294117650000001" green="0.7843137255" blue="0.98039215690000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <constraints>
+                        <constraint firstItem="MBy-jV-loQ" firstAttribute="leading" secondItem="WhF-1w-FeR" secondAttribute="leading" id="085-70-HNS"/>
+                        <constraint firstAttribute="trailing" secondItem="MBy-jV-loQ" secondAttribute="trailing" id="L8Q-NH-szL"/>
+                        <constraint firstItem="MBy-jV-loQ" firstAttribute="top" secondItem="WhF-1w-FeR" secondAttribute="top" id="Yi6-V7-0nS"/>
+                        <constraint firstAttribute="bottom" secondItem="MBy-jV-loQ" secondAttribute="bottom" id="ab3-nV-rAY"/>
+                    </constraints>
                 </view>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -52,4 +63,7 @@
             <point key="canvasLocation" x="137.68115942028987" y="152.67857142857142"/>
         </view>
     </objects>
+    <resources>
+        <image name="sd" width="225" height="225"/>
+    </resources>
 </document>
